--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,40 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .svg-icon {
+    @apply w-12 h-auto fill-colors-purlpe;
+  }
+  .container {
+    @apply bg-colors-white rounded-t-xl rounded-b-xl shadow-container px-24 py-5 mb-28 text-center w-5/6;
+  }
+  .container-scroll {
+    @apply bg-colors-white rounded-t-xl rounded-b-xl shadow-container py-5 mb-11 text-center w-5/6 px-4;
+  }
+  .coding-icon {
+    @apply text-5xl lg:text-7xl text-colors-purlpe space-x-5 lg:space-x-12 mt-4 flex justify-center items-center;
+  }
+
+  .round-border {
+    @apply border-2 border-solid border-colors-purlpe rounded-full p-2 bg-colors-white hover:-rotate-12 duration-300 hover:ease-in;
+  }
+  .content-scroll {
+    @apply overflow-y-scroll h-full;
+  }
+  .hover-contact-icon {
+    @apply hover:scale-110 hover:rotate-3 duration-150 ease-in;
+  }
+  .close .line1 {
+    @apply translate-y-1 -rotate-45;
+  }
+  .close .line2 {
+    @apply opacity-0;
+  }
+  .close .line3 {
+    @apply -translate-y-1 rotate-45;
+  }
+  .hidden-menu {
+    @apply hidden;
+  }
+}
