added a contact form to direct user to mail

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,4 +28,8 @@
   .nav-links {
     @apply active:scale-103 hover:opacity-90 hover:underline;
   }
+
+  .input {
+    @apply w-64 rounded-3xl px-3 py-0.5 shadow-lg lg:w-80 lg:h-9 italic focus:scale-105 duration-200 focus:outline-1;
+  }
 }
