--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,23 @@
 @tailwind components;
 @tailwind utilities;
 
+/* css for my hover links to show underline */
+.underline-hover {
+  display: inline-block;
+  padding-bottom: 2px;
+  background-image: linear-gradient(#730080, #730080);
+
+  background-position: 0 100%;
+  background-size: 0% 2px;
+  background-repeat: no-repeat;
+  transition: background-size 0.2s, background-position 0s 0.2s;
+}
+
+.underline-hover:hover {
+  background-position: 100% 100%;
+  background-size: 100% 2px;
+}
+
 @layer components {
   .svg-icon {
     @apply w-12 h-auto fill-colors-purlpe;
