--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -37,7 +37,7 @@
     @apply overflow-y-scroll h-full;
   }
   .hover-contact-icon {
-    @apply hover:scale-110 hover:rotate-3 duration-150 ease-in;
+    @apply hover:scale-110 hover:-rotate-3 duration-150 ease-in;
   }
   .nav-links {
     @apply active:scale-103 hover:opacity-90 hover:underline;
