--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -40,7 +40,7 @@
     @apply hover:scale-110 hover:-rotate-3 duration-150 ease-in;
   }
   .nav-links {
-    @apply active:scale-103 hover:opacity-90 hover:underline;
+    @apply active:scale-103 hover:opacity-90 hover:underline cursor-pointer;
   }
 
   .input {
