--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,6 +19,21 @@
   background-size: 100% 2px;
 }
 
+/* change scrollbar */
+.content-scroll::-webkit-scrollbar {
+  width: 12px;
+}
+
+.content-scroll::-webkit-scrollbar-track {
+  background-color: #070708;
+}
+
+.content-scroll::-webkit-scrollbar-thumb {
+  background-color: #939090;
+  border-radius: 8px;
+  border: 4px solid #070708;
+}
+
 @layer components {
   .svg-icon {
     @apply w-12 h-auto fill-colors-purlpe;
@@ -37,8 +52,9 @@
     @apply border-2 border-solid border-colors-purlpe rounded-full p-2 bg-colors-white hover:-rotate-12 duration-300 hover:ease-in;
   }
   .content-scroll {
-    @apply overflow-y-scroll h-full;
+    @apply overflow-y-auto h-full;
   }
+
   .hover-contact-icon {
     @apply hover:scale-110 hover:-rotate-3 duration-150 ease-in;
   }
