--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,7 +6,7 @@
 .underline-hover {
   display: inline-block;
   padding-bottom: 2px;
-  background-image: linear-gradient(#730080, #730080);
+  background-image: linear-gradient(#976bed, #9466f1);
 
   background-position: 0 100%;
   background-size: 0% 2px;
